# Java_IDX_Parser

./: LICENSE  README.md  idx_parser.py  pyproject.toml
idx_parser/: idx_parser.py
